# LaserAssemblyTool

./: .gitignore  1.cpp  AG_DEMO  AG_DEMO.cpp  CMakeCache.txt  CMakeLists.txt  LaserDotAlignment  LaserDotAlignment.cpp  LaserDotMeasure  LaserDotMeasure.cpp  LaserDotMeasure_Origin  LaserDotMeasure_Origin.cpp  LaserDotMeasure_Pixel  LaserDotMeasure_Pixel.cpp  LaserLine  LaserLineAlignment  LaserLineAlignment.cpp  Makefile  PlanesIntersection  PlanesIntersection.cpp  README.md  arucolocate  arucolocate.cpp  calculated_laser_line  calculated_laser_line.cpp  cmake_install.cmake  gencal.cpp  get_rvec_tvec  get_rvec_tvec.cpp  imgpro.cpp  laser_dot  laser_dot.cpp  laserbeamguide  laserbeamguide.cpp  laserbeamguidearuco  laserbeamguidearuco.cpp  laserbeamverification  laserbeamverification.cpp  laserorigin  laserorigin.cpp  (+19 more)
LAT_GUI/: LAT_GUI  LAT_GUI.pro  Makefile  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  ui_mainwindow.h
LAT_UI/: LAT_UI.pro  mainwindow.cpp  mainwindow.ui
build-LAT_GUI-Desktop-Debug/: LAT_GUI  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
cmake/: FindPylon.cmake
include/: WinTypes.h  gencal.h  imgpro.h  utility.h
lib/: myHeader.h
old_files/: laserbeamguide.cpp  laserplaneguide.cpp  laserverification.cpp
old_files/include/: utility.h
src/: arucolocate.cpp  gencal.cpp  imgpro.cpp  laserbeamguide.cpp  laserbeamguide1.cpp  laserplaneguide.cpp  laserplaneguide1.cpp  laserverification.cpp  laserverification1.cpp  save.cpp
utility/include/: utility.h
values/: distortion.txt  intrinsic.txt  rmatrix_laser.txt  rmatrix_laser_10up_10.txt  rmatrix_laser_10up_60.txt  rmatrix_laser_10up_horizontal.txt  rmatrix_laser_2.txt  rmatrix_laser_3.txt  rmatrix_laser_4.txt  tvec_laser.txt  tvec_laser_1.txt  tvec_laser_10up_10.txt  tvec_laser_10up_60.txt  tvec_laser_2.txt  tvec_laser_3.txt  tvec_laser_5.txt
values/camera_matrix/40233401/: distortion.txt  intrinsic.txt
values/camera_matrix/calibration_cam0/: distortion.txt  intrinsic.txt
values/laser_transform/: rmatrix_L1_V3.txt  rmatrix_L1_V4.txt  rmatrix_L2_V3.txt  rmatrix_L2_V4.txt  rmatrix_L3_V3.txt  rmatrix_L3_V4.txt  rmatrix_L4_V3.txt  rmatrix_L4_V4.txt  tvec_L1_V3.txt  tvec_L1_V4.txt  tvec_L2_V3.txt  tvec_L2_V4.txt  tvec_L3_V3.txt  tvec_L3_V4.txt  tvec_L4_V3.txt  tvec_L4_V4.txt
values/real_laserdot/: real_laserdot_l3_d1.txt  real_laserdot_l3_d2.txt  real_laserdot_l4_d1.txt  real_laserdot_l4_d2.txt
values/real_laserline_ends/: end_l3_d1.txt  end_l3_d2.txt  start_l3_d1.txt  start_l3_d2.txt
values/verification/: L3_SN03.txt  L4_ddd.txt
